Configuração da comunicação I2C e envio de mensagem de teste para o display

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(Tarefa-UART-I2C Tarefa-UART-I2C.c )
+add_executable(Tarefa-UART-I2C Tarefa-UART-I2C.c libs/ssd1306.c)
 
 pico_set_program_name(Tarefa-UART-I2C "Tarefa-UART-I2C")
 pico_set_program_version(Tarefa-UART-I2C "0.1")
